# aws___modern-data-architecture-accelerator

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pages  .viperlightignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  PREDEPLOYMENT.md  README.md  TESTING.md  lerna.json  nx.json  package-lock.json  package.json  requirements-dev.txt  solution-manifest.yaml  sonar-project.properties
.claude/agents/: story-review.md
.claude/rules/: developer-code-documentation.md  developer-code-review-python.md  developer-code-review-typescript.md  developer-coding-standards.md  developer-iterative-development.md  developer-module-creation.md  developer-pre-push-review.md  developer-review-agent-authoring.md  developer-scripts-authoring.md  review-architecture.md  review-compliance.md  review-diff-risk.md  review-documentation.md  review-module-quality.md  review-mr-summary.md  review-starter-kit-standards.md  review-testing-standards.md  user-config-authoring.md
.cursor/rules/: developer-code-documentation.mdc  developer-code-review-python.mdc  developer-code-review-typescript.mdc  developer-code-review.mdc  developer-coding-standards.mdc  developer-iterative-development.mdc  developer-module-creation.mdc  developer-operational-guidance.mdc  developer-pre-push-review.mdc  developer-review-agent-authoring.mdc  developer-scripts-authoring.mdc  developer-working-requirements.mdc  review-architecture.mdc  review-compliance.mdc  review-diff-risk.mdc  review-documentation.mdc  review-module-quality.mdc  review-mr-summary.mdc  review-starter-kit-standards.mdc  review-testing-standards.mdc  user-config-authoring.mdc
.github/: copilot-instructions.md
.github/instructions/: developer-code-documentation.instructions.md  developer-code-review-python.instructions.md  developer-code-review-typescript.instructions.md  developer-coding-standards.instructions.md  (+14 more)
agent_rules/: developer-code-documentation.md  developer-code-review-python.md  developer-code-review.md  developer-iterative-development.md  developer-module-creation.md  developer-operational-guidance.md  developer-pre-push-review.md  developer-review-agent-authoring.md  developer-scripts-authoring.md  review-architecture.md  review-compliance.md  review-diff-risk.md  review-module-quality.md  review-starter-kit-standards.md  user-config-authoring.md
deployment/: build-open-source-dist.sh
docs/: MDAA.drawio
installer/: package-lock.json  package.json
schemas/: package.json
scripts/ci/python-tests/: conftest.py  pyproject.toml  test_generate_starter_kit_jobs.py
scripts/test/python-tests/: conftest.py  pyproject.toml  test_starter_kit_runner.py
starter_kits/: .npmignore  jest.config.js  package.json
starter_kits/genai_foundation/lambda/python-tests/: conftest.py  pyproject.toml  test_kb_custom_transform.py  test_support_function.py
starter_kits/mlops_platform/seed_code/training/: .pre-commit-config.yaml  README.md  buildspec.yml  pyproject.toml
starter_kits/mlops_platform/seed_code/training/mdaa-config/: mdaa.yaml  pipeline.yaml
starter_kits/mlops_platform/seed_code/training/ml_pipelines/: README.md  _utils.py  get_pipeline_definition.py  run_pipeline.py
starter_kits/mlops_platform/seed_code/training/ml_pipelines/training/: pipeline.py
starter_kits/mlops_platform/seed_code/training/notebooks/: sm_pipelines_runbook.ipynb
starter_kits/mlops_platform/seed_code/training/source_scripts/: README.md  evaluate.py  preprocessing.py
starter_kits/mlops_platform/seed_code/training/tests/: test_pipeline.py  test_utils.py
(+419 files in other folders)
